\name{NEWS}
\title{News for Package \pkg{ReadGenea}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in version 2.0-3}{
 \itemize{
    \item BUGFIX: Issue with reading of dates
}
}

\section{Changes in version 2.0-2}{
  \itemize{
    \item Speed optimisations for read.bin/convert.hexstream
    \item Removed row labels on created object to reduce memory overheads
    \item NEWS file created
  }
}