@@ -1,12 +1,13 @@
 Package: ReadGenea
 Type: Package
 Title: Package For Reading Binary files
-Version: 2.0-3
-Date: 03/02/2012
+Version: 2.1
+Date: 14/02/2012
 Author: ActivInsights Ltd. <joss.langford@activinsights.co.uk>
 Maintainer: ActivInsights Ltd. <joss.langford@activinsights.co.uk>
 Description: Functions and analytics for Genea accelerometer data into R objects
 License: GPL
 LazyLoad: yes
 Depends: bitops
+Suggests: chron, robfilter
 Packaged: 2011-10-12 13:17:57 UTC; admin
