@@ -28,8 +28,8 @@ res
 
 
 #conduct cross validation
-cv.GFLasso <- function(Y, lambda = seq.log(1, 0.1, 20), K = 10, plot.it = T, relative.lambdas = T, ...){
-
+cv.FLasso <- function(Y, lambda = seq.log(1, 0.1, 20), K = 10, plot.it = T, relative.lambdas = T, ...){
+if (length(dim(Y)) != 2) Y = matrix(Y, ncol=1)
 n = nrow(Y)
 if (relative.lambdas) lambda = lambda * sqrt(max(rowSums(   (  apply(scale(Y, scale=F), 2, function(t) -cumsum ( head(t, -1)) )   )^2) * n/head(as.double(1:n) * (n- as.double(1:n)), -1)))
 
@@ -41,7 +41,7 @@ for (i in 1:K){
 cat("Starting fold number ", i , " / ", K, "\n")
     start.proc.time <- Sys.time()
 cut = sort(inds[1:min(ceiling(n/K), length(inds))])
-fitobj = GFLasso(Y[-cut,] , lambda, relative.lambdas = F, mode = "fit",...)
+fitobj = FLasso(Y[-cut,] , lambda, relative.lambdas = F, mode = "fit",...)
 #fitobj = rbind(fitobj[1,] , fitobj)
 incl = c(0,(1:n )[-cut], n+1)
 diffincl = diff(incl) - 1
@@ -58,7 +58,7 @@ invisible(res)
 }
 
 
-GFLasso <- function (Y, lambda, startpoint = NULL, trace = T, relative.lambdas = T,  mode = c("coefs", "fit"),huber = Inf){
+FLasso <- function (Y, lambda, startpoint = NULL, trace = T, relative.lambdas = T,  mode = c("coefs", "fit"),huber = Inf){
 # relative - want lambda on relative scale
 # huber - threshold for huberisation as function of Y sd (Inf means no huberisation)
 
@@ -69,7 +69,7 @@ output = list()
 ii = 1
 for (i in sort(lambda, dec=T)){
 if (trace) cat("## Lambda = ", i ," \n")
-startpoint = GFLasso(Y=Y, lambda = i, startpoint = startpoint, trace=trace, huber = huber, mode= mode, relative.lambdas = relative.lambdas)
+startpoint = FLasso(Y=Y, lambda = i, startpoint = startpoint, trace=trace, huber = huber, mode= mode, relative.lambdas = relative.lambdas)
 output[[ order(lambda, decreasing=T)[ii] ]] = startpoint
 ii = ii+1
 }
