@@ -18,11 +18,13 @@ An optional filename specifying where to save the processed data object.
 }
   \item{start}{Either:
 A time representation of when the processing is to occur, see \code{\link{reformat.time}} for possible representations, or 
-a page number corresponding to the start of the time window.
+a page number corresponding to the start of the time window, or
+a proportional point (between 0 and 1) to begin reading at.
 }
   \item{end}{Either:
 A time representation of when to end processing, see \code{\link{reformat.time}} for possible representations, or 
-a page number corresponding to the end of the time window.
+a page number corresponding to the end of the time window, or
+a proportional point (between 0 and 1) to begin reading at.
 }
   \item{verbose}{
 	A boolean variable indicating whether information should be printed.
@@ -51,14 +53,21 @@ a page number corresponding to the end of the time window.
 \item{warn}{
         A boolean variable indicating whether the function should warn you before reading in a large number of pages (.=500).  Defaults to \code{FALSE}.
 }
+\item{downsample}{
+	Either an integer rate to downsample by (processing every \code{downsample} observation in the data), or a 2 variable vector giving the downsample rate and offset (otherwise defaulting to 1).
+}
+\item{blocksize}{
+	Integer value giving maximum number of data pages to read in each pass. Defaults to infinite - smaller sizes will split very large data files to read chunk by chunk, reducing memory requirements. \code{blocksize = 1e4} seems often reasonable.
+}
 
 }
 \details{
 The function reads in the desired analysis time window specified by start and end.  These can either be numeric pages, or character timestamps.  The \code{start} and \code{end} variables are checked for consistency.  They are then converted to POSIXct objects and compared to the timestamps within \code{binfile}.  Accordingly, the relevant pages between \code{start} and \code{end} are processed using \code{\link{convert.hexstream}}.  Note that the processing is conservative, meaning that if a specified timestamp falls within the span of a page, that (whole) page is processed.  Note also that the function assumes a header in the binary file of a certain format, 59 lines long.  It also assumes the format of the header is of a standard format so that the calibration data can be extracted correctly.  The processed data object list is optionally saved to a file specified by \code{outfile}.
 }
-\value{A list of two components:
+\value{A list of three components:
 \item{data.out}{A 6 or 7 column matrix of the processed pages, the rows of which are the processed observations in order of processed pages.  The matrix has columns (timestamp,x-axis,y-axis,z-axis,light,button) or (timestamp,x-axis,y-axis,z-axis,light,button,temperature) if \code{do.temp=TRUE}.}
 \item{page.timestamps}{The timestamps as POSIXct representations (as opposed to those within the \code{proc.file} array.}
+\item{freq}{The effective sampling frequency (in Hz).}
 }
 \section{Warning}{
 	\strong{Reading in an entire .bin file will take a long time if the file contains a lot of datasets.}
