@@ -2,6 +2,15 @@
 \title{News for Package \pkg{ReadGenea}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
+\section{Changes in version 2.1}{
+ \itemize{
+    \item Added downsampling and block based loading of data (for very large datasets)    
+    \item Added specification of start and end by proportions of data
+    \item Some speed improvements/optimisations
+    \item Experimental implementations of stft, GFLasso and FLasso.    
+}
+}
+
 \section{Changes in version 2.0-3}{
  \itemize{
     \item BUGFIX: Issue with reading of dates
